--- a/pom.xml
+++ b/pom.xml
@@ -111,11 +111,11 @@
               <configuration>
                 <shadedArtifactAttached>true</shadedArtifactAttached>
                 <shadedClassifierName>project-classifier</shadedClassifierName>
-                <outputFile>shade\${project.artifactId}.jar</outputFile>
+                <outputFile>shade\${project.artifactId}Client.jar</outputFile>
                 <transformers>
                   <transformer implementation=
                                        "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                    <mainClass>it.polimi.ingsw.view.GuiViewLauncher</mainClass>
+                    <mainClass>it.polimi.ingsw.view.Client</mainClass>
                   </transformer>
                 </transformers>
               </configuration>
