--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
                 <transformers>
                   <transformer implementation=
                                        "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                    <mainClass>it.polimi.ingsw.view.Client</mainClass>
+                    <mainClass>it.polimi.ingsw.Client</mainClass>
                   </transformer>
                 </transformers>
               </configuration>
