--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,7 @@
           <artifactId>javafx-maven-plugin</artifactId>
           <version>0.0.4</version>
           <configuration>
-            <mainClass>it.polimi.ingsw.view.GuiView</mainClass>
+            <mainClass>it.polimi.ingsw.view.gui.GuiView</mainClass>
           </configuration>
         </plugin>
       </plugins>
